objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>STZebra__ZebraColor__c</fullName>
        <description>Display Zebra Color Based on Zebra Scores.</description>
        <formula>IF(( STZebra__Zebra_Scores__c &gt;= 0 &amp;&amp; STZebra__Zebra_Scores__c &lt;= 16), &apos;1-Red&apos;,
IF(( STZebra__Zebra_Scores__c &gt;= 17 &amp;&amp; STZebra__Zebra_Scores__c &lt;= 22), &apos;2-Yellow&apos;,
IF(( STZebra__Zebra_Scores__c &gt;= 23 &amp;&amp; STZebra__Zebra_Scores__c &lt;= 28), &apos;3-Green&apos;, &apos;&apos;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Display Zebra Color Based on Zebra Scores.</inlineHelpText>
        <label>ZebraColor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STZebra__Zebra_Color__c</fullName>
        <description>Used for displaying Zebra Color on BZAZ Report.</description>
        <inlineHelpText>Used for displaying Zebra Color on BZAZ Report.</inlineHelpText>
        <label>Zebra Color List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                    <color>#FF0000</color>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                    <color>#FFFF66</color>
                </value>
                <value>
                    <fullName>Green</fullName>
                    <color>#006600</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STZebra__Zebra_Scores__c</fullName>
        <description>Sum of Total of Zebra Score Object&apos;s Field.</description>
        <inlineHelpText>Sum of Total of Zebra Score Object&apos;s Field.</inlineHelpText>
        <label>Zebra Score</label>
        <summarizedField>STZebra__Zebra_Score__c.STZebra__Total_Score__c</summarizedField>
        <summaryForeignKey>STZebra__Zebra_Score__c.STZebra__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Winning_Competitor__c</fullName>
        <inlineHelpText>This is an example of a dependent picklist, you can set it once the Stage = Closed Lost</inlineHelpText>
        <label>Winning Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ABC Competitor</fullName>
                </value>
                <value>
                    <fullName>JKL Competitor</fullName>
                </value>
                <value>
                    <fullName>XYZ Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>